--- a/btListen/build.gradle
+++ b/btListen/build.gradle
@@ -1,14 +1,23 @@
 apply plugin: 'com.android.application'
 
 android {
+    signingConfigs {
+        release {
+            keyAlias 'AndroidDev'
+            keyPassword 'all pigs fed and ready to fly'
+            storeFile file('/media/raittm/userdata/backups/android_dev.jks')
+            storePassword 'aik1do'
+        }
+    }
     compileSdkVersion 23
-    buildToolsVersion '23.0.0'
+    buildToolsVersion '23.0.2'
     defaultConfig {
         applicationId 'raittm.example.btlisten'
         minSdkVersion 15
         targetSdkVersion 15
         versionCode 1
         versionName "1.0"
+        signingConfig signingConfigs.release
     }
     buildTypes {
         release {
